layout is just about done

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Sintony" rel="stylesheet">
     <title>Star Wars</title>
 </head>
 
@@ -23,6 +24,72 @@
     <div class="middle">
         <img class="chewy" width="300px" src="./assets/images/chewy.png" alt="Chewbacha">
         <img class="trooper-main" width="500px" src="./assets/images/stormtrooper.png" alt="Stormtrooper">
+        <div class="interact">
+            <div id="header">
+                <h2>In a galaxy far far away...</h2>
+            </div>
+            <div class="header-info">
+                <p>The dark side has kidnapped our beloved princess. We can get her back with your help! Please
+                    choose someone below to help them out!</p>
+            </div>
+
+        </div>
+        <div class="char-selcet">
+            <div class="character">
+                <h3>Yoda</h3>
+                <div class="char-contain">
+                    <img width="200px" class="chewbacha" src="./assets/images/yoda.png" alt="Chewbacha">
+                </div>
+                <ul class="char-info">
+                    <li>Strength: </li>
+                    <li>Speed: </li>
+                    <li>Defence: </li>
+                    <li>Recovery: </li>
+                </ul>
+            </div>
+            <div class="character">
+                <h3>Luke Skywalker</h3>
+                <div class="char-contain">
+                    <img width="200px" class="chewbacha" src="./assets/images/luke.png" alt="Chewbacha">
+                </div>
+                <ul class="char-info">
+                    <li>Strength: </li>
+                    <li>Speed: </li>
+                    <li>Defence: </li>
+                    <li>Recovery: </li>
+                </ul>
+            </div>
+            <div class="character">
+                <h3>Chewbacha</h3>
+                <div class="char-contain">
+                    <img width="200px" class="chewbacha" src="./assets/images/chewy.png" alt="Chewbacha">
+                </div>
+                <ul class="char-info">
+                    <li>Strength: </li>
+                    <li>Speed: </li>
+                    <li>Defence: </li>
+                    <li>Recovery: </li>
+                </ul>
+            </div>
+            <div class="character">
+                <h3>Han Solo</h3>
+                <div class="char-contain">
+                    <img width="200px" class="chewbacha" src="./assets/images/solo.png" alt="Chewbacha">
+                </div>
+                <ul class="char-info">
+                    <li>Strength: </li>
+                    <li>Speed: </li>
+                    <li>Defence: </li>
+                    <li>Recovery: </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="bottom">
+        <div class="start-button">
+            <button class="btn-begin">Begin Battle</button>
+        </div>
+
     </div>
 </body>
 
