--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     </div>
     <div class="middle">
-        <img class="chewy" width="300px" src="./assets/images/chewy.png" alt="Chewbacha">
+        <img class="chewy" width="275px" src="./assets/images/stormtrooper2.png" alt="Chewbacha">
         <img class="trooper-main" width="500px" src="./assets/images/stormtrooper.png" alt="Stormtrooper">
         <div class="interact">
             <div id="header">
@@ -41,10 +41,10 @@
                     <img width="200px" class="chewbacha" src="./assets/images/yoda.png" alt="Chewbacha">
                 </div>
                 <ul class="char-info">
-                    <li>Strength: </li>
-                    <li>Speed: </li>
-                    <li>Defence: </li>
-                    <li>Recovery: </li>
+                    <li>Strength: 200</li>
+                    <li>Speed: 50</li>
+                    <li>Defense: 125</li>
+                    <li>Recovery: 100</li>
                 </ul>
             </div>
             <div class="character">
@@ -53,10 +53,10 @@
                     <img width="200px" class="chewbacha" src="./assets/images/luke.png" alt="Chewbacha">
                 </div>
                 <ul class="char-info">
-                    <li>Strength: </li>
-                    <li>Speed: </li>
-                    <li>Defence: </li>
-                    <li>Recovery: </li>
+                    <li>Strength: 150</li>
+                    <li>Speed: 100</li>
+                    <li>Defense: 100</li>
+                    <li>Recovery: 150</li>
                 </ul>
             </div>
             <div class="character">
@@ -65,31 +65,36 @@
                     <img width="200px" class="chewbacha" src="./assets/images/chewy.png" alt="Chewbacha">
                 </div>
                 <ul class="char-info">
-                    <li>Strength: </li>
-                    <li>Speed: </li>
-                    <li>Defence: </li>
-                    <li>Recovery: </li>
+                    <li>Strength: 200</li>
+                    <li>Speed: 75</li>
+                    <li>Defense: 150</li>
+                    <li>Recovery: 75</li>
                 </ul>
             </div>
             <div class="character">
-                <h3>Han Solo</h3>
+                <h3>Jonny Olo</h3>
                 <div class="char-contain">
-                    <img width="200px" class="chewbacha" src="./assets/images/solo.png" alt="Chewbacha">
+                    <img width="200px" height="350px" class="chewbacha" src="./assets/images/jonnyo.png"
+                        alt="Chewbacha">
                 </div>
                 <ul class="char-info">
-                    <li>Strength: </li>
-                    <li>Speed: </li>
-                    <li>Defence: </li>
-                    <li>Recovery: </li>
+                    <li>Strength: 175</li>
+                    <li>Speed: 75</li>
+                    <li>Defense: 150</li>
+                    <li>Recovery: 50</li>
                 </ul>
             </div>
         </div>
-    </div>
+        <!--</div>
     <div class="bottom">
         <div class="start-button">
             <button class="btn-begin">Begin Battle</button>
-        </div>
+        </div>-->
 
+    </div>
+    <div class="music">
+        <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
+            src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/370024922&color=%234beaff&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
     </div>
 </body>
 
