--- a/index2.html
+++ b/index2.html
@@ -7,9 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Sintony" rel="stylesheet">
-    <script src="./assets/javascript/game.js">
-
-    </script>
+    <script src="./assets/javascript/game.js"></script>
     <title>Star Wars</title>
 </head>
 
@@ -38,28 +36,28 @@
 
 
             <div class="char-selcet">
-                <a href="#">
+                <a href="#" onclick="GameManager.setGameStart('yoda')">
                     <img width="200px" class="chewbacha" src="./assets/images/yoda.png" alt="Chewbacha">
                     <div>
                         <h3>Yoda</h3>
                         <p>Yoda is the all wise master of the Universe</p>
                     </div>
                 </a>
-                <a href="#">
+                <a href="#" onclick="GameManager.setGameStart('luke')">
                     <img width="200px" class="chewbacha" src="./assets/images/yoda.png" alt="Chewbacha">
                     <div>
                         <h3>Luke Sky Walker</h3>
                         <p>Yoda is the all wise master of the Universe</p>
                     </div>
                 </a>
-                <a href="#">
+                <a href="#" onclick="GameManager.setGameStart('chewy')">
                     <img width="200px" class="chewbacha" src="./assets/images/yoda.png" alt="Chewbacha">
                     <div>
                         <h3>Chewbacha</h3>
                         <p>Yoda is the all wise master of the Universe</p>
                     </div>
                 </a>
-                <a href="#">
+                <a href="#" onclick="GameManager.setGameStart('solo')">
                     <img width="200px" class="chewbacha" src="./assets/images/yoda.png" alt="Chewbacha">
                     <div>
                         <h3>Han Solo</h3>
