--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
         </div>-->
 
     </div>
-    <div class="music">
+    <!-- <div class="music">
         <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
             src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/370024922&color=%234beaff&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
-    </div>
+    </div>-->
 </body>
 
 </html>
