Time for CSS, and maybe adjust the enemy strengths

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
     <div class="interface">
         <a href="#" onclick="gameManager.setGameStart('Yoda')">
-            <img src="./assets/images/player/yoda.png" alt="Yoda">
+            <img class="img-avatar" src="./assets/images/player/yoda.png" alt="Yoda">
             <div>
                 <h3>Yoda</h3>
                 <p>Don't mess with this guy. He may look old... not so much!</p>
