--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="character-box" data-character="Luke">
             <a href="#">
                 <div class="char-holder">
-                    <img class="img-avatar" src="./assets/images/player/luke.png" alt="Luke Skywalker">
+                    <img class="img-avatar" src="./assets/images/player/luke.png" alt="Luke">
                 </div>
                 <div>
                     <h3>Luke Skywalker</h3>
@@ -77,7 +77,7 @@
     <div class="enemy">
 
         <div class="character-box">
-            <a href="#" onclick="gameManager.setGameStart('darth')">
+            <a href="#">
                 <div class="char-holder">
                     <img class="img-avatar" src="./assets/images/enemies/darth.png" alt="Darth Vader">
                 </div>
@@ -88,7 +88,7 @@
             </a>
         </div>
         <div class="character-box">
-            <a href="#" onclick="gameManager.setGameStart('fett')">
+            <a href="#">
                 <div class="char-holder">
                     <img class="img-avatar" src="./assets/images/enemies/fett.png" alt="Boba Fett">
                 </div>
